--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "vscode": "^1.75.0"
   },
+  "license": "MIT",
   "publisher": "kazuito",
   "repository": {
     "type": "git",
