Add script command "webview:watch"

--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
+    "webview:watch":"cd webview && npm run watch",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
